--- a/CamsCust/Storyboard/Base.lproj/Main.storyboard
+++ b/CamsCust/Storyboard/Base.lproj/Main.storyboard
@@ -15,7 +15,7 @@
         <array key="Inter-Medium.ttf">
             <string>Inter-Medium</string>
         </array>
-        <array key="Inter-VariableFont_slnt,wght.ttf">
+        <array key="Inter-Regular.ttf">
             <string>Inter-Regular</string>
         </array>
     </customFonts>
@@ -581,6 +581,9 @@
                     <size key="freeformSize" width="375" height="800"/>
                     <connections>
                         <outlet property="bttnMenu" destination="WIO-ra-DQC" id="wuW-Kq-Ib5"/>
+                        <outlet property="lblActionItemsCount" destination="NSi-0J-nkf" id="xQf-UC-a8b"/>
+                        <outlet property="lblAssetCount" destination="R9c-dN-UPB" id="1bD-id-VWC"/>
+                        <outlet property="lblName" destination="LJ6-cw-TqB" id="76b-Xc-cko"/>
                         <outlet property="myCollectionView" destination="GeJ-OF-bvx" id="eg8-6A-PtV"/>
                     </connections>
                 </viewController>
